--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,45 @@
 <resources>
-    <string name="app_name">Court Counter</string>
+    <string name="app_name">Goal Keeper</string>
+    <string name="team_a_score">0</string>
+    <string name="team_b_score">0</string>
+    <string name="add_point">Add Point</string>
+    <string name="penalty">Add Penalty</string>
+    <string name="reset">Reset</string>
+    <string name="points_text">Points</string>
+    <string name="penalties_text">Penalties</string>
+    <string name="team_name_prompt">Choose a team</string>
+    <string-array name="team_names">
+        <item>Select a team</item>
+        <item>Anaheim Ducks</item>
+        <item>Arizona Coyotes</item>
+        <item>Boston Bruins</item>
+        <item>Buffalo Sabres</item>
+        <item>Calgary Flames</item>
+        <item>Carolina Hurricanes</item>
+        <item>Chicago Blackhawks</item>
+        <item>Colorado Avalanche</item>
+        <item>Columbus Blue Jackets</item>
+        <item>Dallas Stars</item>
+        <item>Detroit Red Wings</item>
+        <item>Edmonton Oilers</item>
+        <item>Florida Panthers</item>
+        <item>Los Angeles Kings</item>
+        <item>Minnesota Wild</item>
+        <item>Montreal Canadiens</item>
+        <item>Nashville Predators</item>
+        <item>New Jersey Devils</item>
+        <item>New York Islanders</item>
+        <item>New York Rangers</item>
+        <item>Ottawa Senators</item>
+        <item>Philadelphia Flyers</item>
+        <item>Pittsburgh Penguins</item>
+        <item>San Jose Sharks</item>
+        <item>St. Louis Blues</item>
+        <item>Tampa Bay Lightning</item>
+        <item>Toronto Maple Leafs</item>
+        <item>Vancouver Canucks</item>
+        <item>Vegas Golden Knights</item>
+        <item>Washington Capitals</item>
+        <item>Winnipeg Jets</item>
+    </string-array>
 </resources>
