--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="add_point">Add Point</string>
     <string name="penalty">Add Penalty</string>
     <string name="reset">Reset</string>
-    <string name="points_text">Points</string>
+    <string name="points_text">Goals</string>
     <string name="penalties_text">Penalties</string>
     <string name="team_name_prompt">Choose a team</string>
     <string-array name="team_names">
